# cia-directorate-of-support

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  OPS.md  README.md  SECURITY.md  bootstrap.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_all.py  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  enhancement.yml
.github/workflows/: ci.yml  codeql.yml
assets/: README.md
common/: README.md  __init__.py  announcer.py  batch.py  cia_common.py  exit_codes.py  manifest.py  rollout.py
config/: README.md  branding.yaml  links.staff.example.yaml  links.yaml  organization.yaml  personnel.holders.example.yaml  personnel.yaml  regulations.yaml
docs/: ACCESSIBILITY.md  BRANCH_PROTECTION.md  BRAND.md  CHANGELOG.md  CODEOWNERS_ENFORCEMENT.md  CONTRIBUTING.md  NOTICE  OPS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_OPERATORS.md
ds/: README.md  chain_of_command.py  public_information.py  server_regulations.py
esd/: README.md  coc.py  information.py  staff_documents.py
grs/: README.md  coc.py  information.py  staff_documents.py
osec/: README.md  information.py  open_positions.py  spp_information.py  staff_documents.py
ote/: README.md  coc.py  open_positions.py  program_overview.py  public_information.py  staff_documents.py
requirements/: README.md  requirements-dev.txt  requirements.txt
tests/: conftest.py  test_accessibility.py  test_announcer.py  test_brand_legal.py  test_common_hardening.py  test_config_overlays.py  test_embed_limits.py  test_ir_reliability.py  test_run_all_rollout.py  test_security_architecture.py  test_webhook_purge.py  test_webhook_reactions.py
tools/: README.md  bootstrap.py  diagnose_webhook_state.py  reset_webhook_state.py  run_all.py  sync_file_banners.py  validate_repo.py
units/: README.md
units/ds/: README.md  chain_of_command.py  public_information.py  server_regulations.py
units/esd/: README.md  coc.py  information.py  staff_documents.py
units/grs/: README.md  coc.py  information.py  staff_documents.py
units/osec/: README.md  information.py  open_positions.py  spp_information.py  staff_documents.py
units/ote/: README.md  coc.py  open_positions.py  program_overview.py  public_information.py  staff_documents.py
