# === FILE HEADER ===
# Title: Pyproject
# Path: pyproject.toml
# Created: 2026-07-14
# Created by: docshamxo
# Modified:
#   - 2026-07-14 | docshamxo | Initial creation
#   - 2026-07-15 | docshamxo | Bump python-dotenv and ruff; pin requests.
#   - 2026-07-17 | docshamxo | Add pytest-cov, pre-commit, and coverage fail-under floor.
# === END FILE HEADER ===

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cia-directorate-of-support"
version = "1.0.0"
description = "Discord announcer scripts for the CIA Directorate of Support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "discord.py==2.6.4",
  "python-dotenv==1.2.2",
  "PyYAML==6.0.3",
  "requests==2.34.2",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.21",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "pre-commit==4.2.0",
]

[tool.setuptools.packages.find]
include = ["common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=common",
  "--cov-report=term-missing",
  "--cov-fail-under=40",
]

[tool.coverage.run]
source = ["common"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# === FILE FOOTER ===
# End of file: pyproject.toml
# Maintained by: docshamxo
# === END FILE FOOTER ===
