# === FILE HEADER ===
# Title: Pyproject
# Path: pyproject.toml
# Created: 2026-07-14
# Created by: docshamxo
# Modified:
#   - 2026-07-14 | docshamxo | Initial creation
#   - 2026-07-15 | docshamxo | Bump python-dotenv and ruff; pin requests.
#   - 2026-07-17 | docshamxo | Bump package version to 1.1.0 (release engineering).
#   - 2026-07-17 | docshamxo | Add pytest testpaths / quiet defaults for CI.
#   - 2026-07-17 | docshamxo | Bump pytest for PYSEC-2026-1845.
# === END FILE HEADER ===

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cia-directorate-of-support"
version = "1.1.0"
description = "Discord announcer scripts for the CIA Directorate of Support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "discord.py==2.6.4",
  "python-dotenv==1.2.2",
  "PyYAML==6.0.3",
  "requests==2.34.2",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.21",
  "pytest==9.0.3",
]

[tool.setuptools.packages.find]
include = ["common*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore::DeprecationWarning",
]

# === FILE FOOTER ===
# End of file: pyproject.toml
# Maintained by: docshamxo
# === END FILE FOOTER ===
