# === FILE HEADER ===
# Title: Pyproject
# Path: pyproject.toml
# Created: 2026-07-14
# Created by: docshamxo
# Modified:
#   - 2026-07-14 | docshamxo | Initial creation
#   - 2026-07-15 | docshamxo | Bump python-dotenv and ruff; pin requests.
#   - 2026-07-17 | docshamxo | Bump package version to 1.1.0 (release engineering).
#   - 2026-07-17 | docshamxo | Add pytest testpaths / quiet defaults for CI.
#   - 2026-07-17 | docshamxo | Bump pytest for PYSEC-2026-1845.
#   - 2026-07-17 | docshamxo | Add pytest-cov, pre-commit, and coverage fail-under floor.
#   - 2026-07-17 | docshamxo | Declare MIT license (see LICENSE brand-use notice).
# === END FILE HEADER ===

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cia-directorate-of-support"
version = "1.1.0"
description = "Discord announcer scripts for an unofficial Roblox community DS roleplay"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "discord.py==2.6.4",
  "python-dotenv==1.2.2",
  "PyYAML==6.0.3",
  "requests==2.34.2",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.22",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pre-commit==4.6.0",
]

[tool.setuptools.packages.find]
include = ["common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--cov=common",
  "--cov-report=term-missing",
  "--cov-fail-under=70",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["common"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# === FILE FOOTER ===
# End of file: pyproject.toml
# Maintained by: docshamxo
# === END FILE FOOTER ===
